# kaleidoscope

./: .gitignore  CITATION.cff  CONTRIBUTING.md  INSTALL.md  README.md  _config.yml  environment-minimal.yml  environment.yml  pyproject.toml
.github/workflows/: codeql.yml  python-package.yml
doc/: doc.ipynb  overview.ipynb
kaleidoscope/: __init__.py  callbacks.py  generators.py  logger.py  parser.py  processor.py  progress.py  reader.py  readerfactory.py  runner.py  signalhandler.py  writer.py  writerfactory.py
kaleidoscope/algorithms/: __init__.py  codec.py  filter.py  randomize.py
kaleidoscope/config/: __init__.py  config.collect.json  config.derand.json  config.random.json  config.reader.json  config.scatter.json  config.writer.json  config.yml
kaleidoscope/interface/: __init__.py  algorithm.py  constants.py  exitcodes.py  generating.py  logging.py  metric.py  operator.py  plot.py  processing.py  random.py  reading.py  signalhandling.py  writing.py
kaleidoscope/main/: __init__.py  collect.py  epocsodielak.py  kaleidoscope.py  main.py  resolve.py  scatter.py
kaleidoscope/operators/: __init__.py  collectop.py  derandop.py  randomizeop.py  randomop.py  scatterop.py
kaleidoscope/templates/: 200001-ESACCI-L4_GHRSST-SSTdepth-OSTIA-GLOB_CDR3.0-v02.0-fv01.0-1M.cdl  __init__.py  esa_cci_oc.cdl  esa_scope_cs.cdl  esa_scope_pp.cdl  esa_scope_pp_parameters.cdl  glorys.cdl
kaleidoscope/util/: __init__.py  ncbin.py
kaleidoscope/val/: __init__.py  period.py  plots.py
test/kaleidoscope/: __init__.py  test_generators.py  test_reader.py  test_writer.py
test/kaleidoscope/main/: __init__.py  test_collect.py  test_epocsodielak.py  test_kaleidoscope.py  test_processor.py  test_scatter.py
test/kaleidoscope/resources/: __init__.py
